---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020.12.XX
  Features:
    - Added icon support for silicon wafers and solder
  Changes:
    - Moved function `vertical_pipe_shadow` into Artisanal Reskins: Library, now dependent on 1.1.1
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020.11.26
  Features:
    - Moved to Factorio 1.1
    - Added big chests and logistic chests from Angel's Industries
    - Added warehouses and logistic warehouses from Angel's Addons - Storage Options
    - Added support for the recipe processing mineral sludge when playing Sea Block
    - Added lighting to several items and intermediaries
  Changes:
    - Adjusted handling of Bob's electronics related recipes due to changes in Artisanal Reskins: Bob's Mods
    - Adjusted `drawing_box` for several structures
    - Reworked how `working_visualisations` is handled for the strand casting machine
    - Removed defines for `working_visualisations` for the blast furnace and casting machine
  Locale:
    - Updated German localizations
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020.11.08
  Features:
    - Implemented the advanced gas refinery
    - Added settings to use Angel's material colors for pipes and intermediaries (default on)
    - Added icon for "Glowing hot iron plate"
    - Now reskins plate recipes for lead and tin when Angel's Smelting is not present
    - Now reskins "Metallurgy smelting 5" technology
  Changes:
    - Changed how default indicators for true/false setting descriptions are handled internally
    - Changed to refer to Angel's Smelting graphics where possible to reduce mod size; now dependent on Angel's Smelting version 0.6.12+
    - Changed the progression tiers of the chemical furnace from 1-4 to 2-5 to reflect changes in Angel's Smelting