@@ -3,6 +3,7 @@ Version: 1.1.1
 Date: 2020.12.XX
   Features:
     - Added icon support for silicon wafers and solder
+    - Added support for items and recipes added by Angel's Extended Smelting and Compression mod
   Changes:
     - Moved function `vertical_pipe_shadow` into Artisanal Reskins: Library, now dependent on 1.1.1
 ---------------------------------------------------------------------------------------------------
